<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerInside"
        android:background="@drawable/bg_food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="Kembali"
        android:layout_margin="@dimen/margin_icon"
        android:src="@drawable/ic_back_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/large"
        android:background="@drawable/background_bottom_sheet"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/btm_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_background">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_food_stand"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/title_halo"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_welcome"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

            <TextView
                android:id="@+id/tv_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingHorizontal="50dp"
                android:layout_marginVertical="@dimen/small"
                android:paddingVertical="5dp"
                android:text="@string/msg_new_akun"
                android:textAlignment="center"
                android:textColor="@color/orange_primary_strong"
                android:textSize="13dp"
                android:backgroundTint="@color/warning"
                android:background="@drawable/bg_radius"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/textView14"
                tools:layout_editor_absoluteX="24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/error_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_msg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/error_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                app:boxBackgroundColor="@android:color/transparent"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/error_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="end"
                android:text="@string/lupa_password"
                android:textAlignment="viewEnd"
                android:textColor="@color/orange_primary_strong"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/error_password" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.Holo.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="16dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:shadowColor="@color/background_grey"
                android:background="@drawable/bg_login_button"
                android:text="@string/login"
                android:textStyle="bold"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="@dimen/large"
                android:text="@string/tidak_ada_akun"
                android:textColor="@color/orange_primary_strong"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>