<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".ui.auth.SignUpActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerInside"
            android:background="@drawable/bg_food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Kembali"
            android:layout_margin="@dimen/margin_icon"
            android:src="@drawable/ic_back_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/btm_margin"
            android:background="@drawable/background_bottom_sheet"
            android:focusable="true"
            android:padding="@dimen/large"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/title_halo"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_welcome"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_add_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_subtitle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:background="@android:color/transparent"
                android:hint="@string/nama"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_nameReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/medium"
                android:background="@android:color/transparent"
                android:hint="@string/no_hp"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_nama">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_phoneReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="20"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_emailReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                app:boxBackgroundColor="@android:color/transparent"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_passwordReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAllCaps="false"
                android:background="@drawable/bg_login_button"
                android:text="@string/daftar"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_password" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.Holo.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_phone" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>